feat: clean inactive session, and raw qrcode
